--- a/composer.json
+++ b/composer.json
@@ -2,35 +2,217 @@
     "type": "project",
     "license": "proprietary",
     "require": {
-        "php": "^7.1.3",
+        "php": "^7.2",
         "ext-ctype": "*",
         "ext-iconv": "*",
-        "sensio/framework-extra-bundle": "^5.1",
-        "symfony/asset": "4.2.*",
-        "symfony/console": "4.2.*",
-        "symfony/dotenv": "4.2.*",
-        "symfony/expression-language": "4.2.*",
-        "symfony/flex": "^1.1",
-        "symfony/form": "4.2.*",
-        "symfony/framework-bundle": "4.2.*",
-        "symfony/monolog-bundle": "^3.1",
-        "symfony/orm-pack": "*",
-        "symfony/process": "4.2.*",
-        "symfony/security-bundle": "4.2.*",
-        "symfony/serializer-pack": "*",
-        "symfony/swiftmailer-bundle": "^3.1",
-        "symfony/translation": "4.2.*",
-        "symfony/twig-bundle": "4.2.*",
-        "symfony/validator": "4.2.*",
-        "symfony/web-link": "4.2.*",
-        "symfony/yaml": "4.2.*"
+        "alchemy/binary-driver": "v2.0.0",
+        "clue/stream-filter": "v1.4.0",
+        "cocur/slugify": "v3.1",
+        "container-interop/container-interop": "1.2.0",
+        "doctrine/annotations": "v1.6.0",
+        "doctrine/cache": "v1.8.0",
+        "doctrine/collections": "v1.5.0",
+        "doctrine/common": "v2.10.0",
+        "doctrine/data-fixtures": "v1.3.1",
+        "doctrine/dbal": "v2.8.0",
+        "doctrine/doctrine-bundle": "1.10.0",
+        "doctrine/doctrine-cache-bundle": "1.3.5",
+        "doctrine/doctrine-fixtures-bundle": "v2.4.1",
+        "doctrine/doctrine-migrations-bundle": "v1.3.1",
+        "doctrine/event-manager": "v1.0.0",
+        "doctrine/inflector": "v1.3.0",
+        "doctrine/instantiator": "1.1.0",
+        "doctrine/lexer": "v1.0.1",
+        "doctrine/migrations": "v1.8.1",
+        "doctrine/orm": "v2.6.3",
+        "doctrine/persistence": "v1.1.0",
+        "doctrine/reflection": "v1.0.0",
+        "easycorp/easy-log-handler": "v1.0.7",
+        "egulias/email-validator": "2.1.6",
+        "elasticsearch/elasticsearch": "v6.0.1",
+        "evenement/evenement": "v2.1.0",
+        "facebook/graph-sdk": "5.6.3",
+        "facebook/webdriver": "1.6.0",
+        "fig/link-util": "1.0.0",
+        "friendsofsymfony/jsrouting-bundle": "2.2.2",
+        "friendsofsymfony/oauth-server-bundle": "1.6.1",
+        "friendsofsymfony/oauth2-php": "1.2.3",
+        "friendsofsymfony/rest-bundle": "2.4.0",
+        "friendsofsymfony/user-bundle": "v2.1.2",
+        "fzaninotto/faker": "v1.8.0",
+        "gedmo/doctrine-extensions": "v2.4.36",
+        "guzzlehttp/guzzle": "6.3.3",
+        "guzzlehttp/promises": "v1.3.1",
+        "guzzlehttp/psr7": "1.4.2",
+        "guzzlehttp/ringphp": "1.1.1",
+        "guzzlehttp/streams": "3.0.0",
+        "hamcrest/hamcrest-php": "v2.0.0",
+        "imagine/imagine": "v0.7.1",
+        "jdorn/sql-formatter": "v1.2.17",
+        "jeremykendall/php-domain-parser": "3.0.0",
+        "jms/metadata": "1.7.0",
+        "jms/parser-lib": "1.0.0",
+        "jms/serializer": "1.13.0",
+        "jms/serializer-bundle": "2.4.2",
+        "johngrogg/ics-parser": "v2.1.7",
+        "jsvrcek/ics": "0.6",
+        "jsvrcek/ics-bundle": "0.1",
+        "knplabs/gaufrette": "v0.7.0",
+        "knplabs/knp-gaufrette-bundle": "v0.5.3",
+        "knplabs/knp-menu": "2.3.0",
+        "knplabs/knp-menu-bundle": "v2.2.1",
+        "league/uri": "4.2.2",
+        "liip/imagine-bundle": "2.1.0",
+        "memio/linter": "v1.0.2",
+        "memio/memio": "v1.1.1",
+        "memio/model": "v1.4.1",
+        "memio/pretty-printer": "v1.0.3",
+        "memio/twig-template-engine": "v1.2.7",
+        "memio/validator": "v1.0.2",
+        "mockery/mockery": "1.2.0",
+        "monolog/monolog": "1.24.0",
+        "myclabs/deep-copy": "1.8.1",
+        "nesbot/carbon": "1.36.1",
+        "neutron/temporary-filesystem": "2.3.0",
+        "nikic/php-parser": "v4.1.0",
+        "ocramius/package-versions": "1.3.0",
+        "ocramius/proxy-manager": "2.2.2",
+        "pagerfanta/pagerfanta": "v2.0.1",
+        "paragonie/random_compat": "v2.0.17",
+        "payum/iso4217": "1.0.1",
+        "payum/payum": "1.4.3",
+        "payum/payum-bundle": "2.3.1",
+        "phar-io/manifest": "1.0.3",
+        "phar-io/version": "2.0.1",
+        "php-ffmpeg/php-ffmpeg": "v0.13",
+        "php-http/guzzle6-adapter": "v1.1.1",
+        "php-http/httplug": "v1.1.0",
+        "php-http/message": "1.7.2",
+        "php-http/message-factory": "v1.0.2",
+        "php-http/promise": "v1.0.0",
+        "phpcollection/phpcollection": "0.5.0",
+        "phpdocumentor/reflection-common": "1.0.1",
+        "phpdocumentor/reflection-docblock": "4.3.0",
+        "phpdocumentor/type-resolver": "0.4.0",
+        "phpoption/phpoption": "1.5.0",
+        "polishsymfonycommunity/symfony-mocker-container": "v1.0.2",
+        "psr/cache": "1.0.1",
+        "psr/container": "1.0.0",
+        "psr/http-message": "1.0.1",
+        "psr/link": "1.0.0",
+        "psr/log": "1.1.0",
+        "psr/simple-cache": "1.0.1",
+        "ramsey/uuid": "3.8.0",
+        "react/promise": "v2.7.0",
+        "ruflin/elastica": "6.0.2",
+        "sebastian/code-unit-reverse-lookup": "1.0.1",
+        "sebastian/comparator": "3.0.2",
+        "sebastian/diff": "3.0.1",
+        "sebastian/environment": "4.0.1",
+        "sebastian/exporter": "3.1.0",
+        "sebastian/global-state": "2.0.0",
+        "sebastian/object-enumerator": "3.0.3",
+        "sebastian/object-reflector": "1.1.1",
+        "sebastian/recursion-context": "3.0.0",
+        "sebastian/resource-operations": "2.0.1",
+        "sebastian/version": "2.0.1",
+        "sensio/framework-extra-bundle": "v5.2.2",
+        "simshaun/recurr": "v2.2.3",
+        "sonata-project/block-bundle": "3.12.1",
+        "sonata-project/cache": "2.0.1",
+        "sonata-project/core-bundle": "3.12.0",
+        "sonata-project/datagrid-bundle": "2.4.0",
+        "sonata-project/doctrine-extensions": "1.1.2",
+        "sonata-project/intl-bundle": "2.5.0",
+        "spatie/image-optimizer": "1.1.3",
+        "stof/doctrine-extensions-bundle": "v1.3.0",
+        "swiftmailer/swiftmailer": "v6.1.3",
+        "sylius-labs/association-hydrator": "v1.1.0",
+        "sylius/sylius": "v1.3.5",
+        "symfony-cmf/routing": "2.1.0",
+        "symfony-cmf/routing-bundle": "2.1.1",
+        "symfony/asset": "v4.2.0",
+        "symfony/browser-kit": "v4.2.0",
+        "symfony/cache": "v4.2.0",
+        "symfony/class-loader": "v3.4.19",
+        "symfony/config": "v4.2.0",
+        "symfony/console": "v4.2.0",
+        "symfony/contracts": "v1.0.0",
+        "symfony/debug": "v4.2.0",
+        "symfony/debug-bundle": "v4.2.0",
+        "symfony/debug-pack": "v1.0.6",
+        "symfony/dependency-injection": "v4.2.0",
+        "symfony/doctrine-bridge": "v4.2.0",
+        "symfony/dom-crawler": "v4.2.0",
+        "symfony/dotenv": "v4.2.0",
+        "symfony/event-dispatcher": "v4.2.0",
+        "symfony/expression-language": "v4.2.0",
+        "symfony/filesystem": "v4.2.0",
+        "symfony/finder": "v4.2.0",
+        "symfony/flex": "v1.1.8",
+        "symfony/form": "v4.2.0",
+        "symfony/framework-bundle": "v4.2.0",
+        "symfony/http-foundation": "v4.2.0",
+        "symfony/http-kernel": "v4.2.0",
+        "symfony/inflector": "v4.2.0",
+        "symfony/intl": "v4.2.0",
+        "symfony/maker-bundle": "v1.9.0",
+        "symfony/monolog-bridge": "v4.2.0",
+        "symfony/monolog-bundle": "v3.3.1",
+        "symfony/options-resolver": "v4.2.0",
+        "symfony/orm-pack": "v1.0.5",
+        "symfony/panther": "v0.2.0",
+        "symfony/phpunit-bridge": "v4.2.0",
+        "symfony/polyfill-ctype": "v1.10.0",
+        "symfony/polyfill-iconv": "v1.10.0",
+        "symfony/polyfill-intl-icu": "v1.10.0",
+        "symfony/polyfill-mbstring": "v1.10.0",
+        "symfony/polyfill-php72": "v1.10.0",
+        "symfony/process": "v4.2.0",
+        "symfony/profiler-pack": "v1.0.3",
+        "symfony/property-access": "v4.2.0",
+        "symfony/property-info": "v4.2.0",
+        "symfony/proxy-manager-bridge": "v4.2.0",
+        "symfony/routing": "v4.2.0",
+        "symfony/security": "v4.2.0",
+        "symfony/security-bundle": "v4.2.0",
+        "symfony/serializer": "v4.2.0",
+        "symfony/serializer-pack": "v1.0.1",
+        "symfony/stopwatch": "v4.2.0",
+        "symfony/swiftmailer-bundle": "v3.2.4",
+        "symfony/templating": "v4.2.0",
+        "symfony/test-pack": "v1.0.4",
+        "symfony/thanks": "v1.1.0",
+        "symfony/translation": "v4.2.0",
+        "symfony/twig-bridge": "v4.2.0",
+        "symfony/twig-bundle": "v4.2.0",
+        "symfony/validator": "v4.2.0",
+        "symfony/var-dumper": "v4.2.0",
+        "symfony/var-exporter": "v4.2.0",
+        "symfony/web-link": "v4.2.0",
+        "symfony/web-profiler-bundle": "v4.2.0",
+        "symfony/web-server-bundle": "v4.2.0",
+        "symfony/yaml": "v4.2.0",
+        "tecnickcom/tcpdf": "6.2.26",
+        "theseer/tokenizer": "1.1.0",
+        "twig/extensions": "v1.5.3",
+        "twig/twig": "v2.5.0",
+        "webmozart/assert": "1.3.0",
+        "white-october/pagerfanta-bundle": "v1.2.2",
+        "willdurand/hateoas": "2.12.0",
+        "willdurand/hateoas-bundle": "1.4.0",
+        "willdurand/js-translation-bundle": "2.6.6",
+        "willdurand/jsonp-callback-validator": "v1.1.0",
+        "willdurand/negotiation": "v2.3.1",
+        "winzou/state-machine": "0.3.3",
+        "winzou/state-machine-bundle": "v0.3.1",
+        "zendframework/zend-code": "3.3.1",
+        "zendframework/zend-eventmanager": "3.2.1",
+        "zendframework/zend-hydrator": "2.4.1",
+        "zendframework/zend-stdlib": "3.2.1"
     },
     "require-dev": {
-        "symfony/debug-pack": "*",
-        "symfony/maker-bundle": "^1.0",
-        "symfony/profiler-pack": "*",
-        "symfony/test-pack": "*",
-        "symfony/web-server-bundle": "4.2.*"
+
     },
     "config": {
         "preferred-install": {
