--- a/composer.json
+++ b/composer.json
@@ -24,27 +24,8 @@
         "symfony/validator": "4.2.*",
         "symfony/web-link": "4.2.*",
         "symfony/yaml": "4.2.*",
+        "sylius/resource-bundle": "1.3.*",
 
-
-        "doctrine/annotations": "v1.6.0",
-        "doctrine/cache": "v1.8.0",
-        "doctrine/collections": "v1.5.0",
-        "doctrine/common": "v2.10.0",
-        "doctrine/data-fixtures": "v1.3.1",
-        "doctrine/dbal": "v2.8.0",
-        "doctrine/doctrine-bundle": "1.10.0",
-        "doctrine/doctrine-cache-bundle": "1.3.5",
-        "doctrine/doctrine-fixtures-bundle": "v2.4.1",
-        "doctrine/doctrine-migrations-bundle": "v1.3.1",
-        "doctrine/event-manager": "v1.0.0",
-        "doctrine/inflector": "v1.3.0",
-        "doctrine/instantiator": "1.1.0",
-        "doctrine/lexer": "v1.0.1",
-        "doctrine/migrations": "v1.8.1",
-        "doctrine/orm": "v2.6.3",
-        "doctrine/persistence": "v1.1.0",
-        "doctrine/reflection": "v1.0.0",
-        "sylius/sylius": "v1.3.5",
         "symfony-cmf/routing": "2.1.0",
         "symfony-cmf/routing-bundle": "2.1.1",
         "symfony/asset": "v4.2.0",
